--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -17,3 +17,29 @@
     font-size: 24px;
     font-weight: bold;
 }
+
+
+
+
+/* My version
+p {
+    background-color: rgb(252, 137, 137);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#id-2 {
+    font-size: 36px;
+    color: blue;
+}
+
+.class-3 {
+    font-size: 24px;
+}
+
+#id-4 {
+    background-color: chartreuse;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+*/
