--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -12,8 +12,7 @@ body {
 
 .title {
   background: #e3f4ff;
-  margin-top: 0;
-  margin-bottom: 8px;
+  margin: 0 auto 8px;
   font-size: 16px;
   padding: 16px;
 }
