--- a/flex/03-flex-header-2/solution/solution.css
+++ b/flex/03-flex-header-2/solution/solution.css
@@ -51,7 +51,7 @@ ul {
 
 .header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 8px;
 }
